--- a/angularrecrutadoresapp/src/app/angular-recrutadores/angular-recrutadores.component.html
+++ b/angularrecrutadoresapp/src/app/angular-recrutadores/angular-recrutadores.component.html
@@ -1,1 +1,14 @@
-<app-angular-recrutadores></app-angular-recrutadores>
+<div class="jumbotron py-3">
+  <h1 class="display-r4 text-center">Front Angular</h1>
+</div>
+
+<div class="row">
+  <div class="col-md-6">
+    <app-angular-recrutadores-form></app-angular-recrutadores-form>
+  </div>
+  <div class="col-md-6">
+    <span>Lista de Usuarios</span>
+  </div>
+</div>
+
+
