--- a/angularrecrutadoresapp/src/app/angular-recrutadores/angular-recrutadores-form/angular-recrutadores-form.component.html
+++ b/angularrecrutadoresapp/src/app/angular-recrutadores/angular-recrutadores-form/angular-recrutadores-form.component.html
@@ -1,15 +1,24 @@
-<form>
-  <input type="hidden" id="id" [value]="service.formData.id" />
-  <div class="form-group">
-    <label>Nome:</label>
-    <input type="text" class="form-control form-control-lg" placeholder="Preencha Nome" name="nome" #nome="ngModel" [(ngModel)]="service.formData.nome" />
+<form novalidate autocomplete="off" #form="ngForm" (submit)="onSubmit(form)">
+  <input type="hidden" name="id" [value]="service.formData.id" />
+  <div class="form-row">
+    <div class="form-group col-md-12">
+      <label>Nome</label>
+      <input type="text" class="form-control form-control-lg" placeholder="Full Name" name="nome" #nome="ngModel"
+        [(ngModel)]="service.formData.nome" required [class.invalid]="nome.invalid && nome.touched" />
+    </div>
+
+    <div class="form-group col-md-12">
+      <label>Email</label>
+      <input type="text" class="form-control form-control-lg" placeholder="Full Name" name="email" #email="ngModel"
+        [(ngModel)]="service.formData.email" required [class.invalid]="email.invalid && email.touched" />
+    </div>
+    <div class="form-group col-md-12">
+      <label>Empresa</label>
+      <input type="text" class="form-control form-control-lg" placeholder="Full Name" name="empresa" #empresa="ngModel"
+        [(ngModel)]="service.formData.empresa" required [class.invalid]="empresa.invalid && empresa.touched" />
+    </div>
   </div>
   <div class="form-group">
-    <label>Email:</label>
-    <input type="text" class="form-control form-control-lg" placeholder="Preencha Email" name="email" #email="ngModel" [(ngModel)]="service.formData.email" />
-  </div>
-  <div class="form-group">
-    <label>Empresa:</label>
-    <input type="text" class="form-control form-control-lg" placeholder="Preencha Empresa" name="empresa" #empresa="ngModel" [(ngModel)]="service.formData.empresa" />
+    <button type="submit" class="btn btn-info btn-lg btn-block" [disabled]="form.invalid">Submit</button>
   </div>
 </form>
